<resources>
    <string name="app_name">BBQVideo</string>
    <string name="open_gl_test">OpenGL 测试用例</string>
    <string name="triangle_test">三角形渲染</string>
    <string name="camera_preview">相机预览</string>
    <string name="video_decode_test">Video解码 测试用例</string>
    <string name="codec_decode_preview">Codec硬解码视频</string>
    <string name="ffmpeg_decode_preview">FFMpeg软解码视频</string>
    <string name="input_url">请输入播放视频的URL</string>
    <string name="default_url">https://stream7.iqilu.com/10339/upload_transcode/202002/09/20200209104902N3v5Vpxuvb.mp4</string>
    <string name="confirm">confirm</string>
    <string name="prepare">prepare</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="resume">resume</string>
    <string name="seek">seek</string>
    <string name="zero">00:00</string>
</resources>