<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".video.CodecDecodePreviewActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/url_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_url"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:text="@string/default_url" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/prepare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/prepare" />

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/play" />

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/pause" />

        <Button
            android:id="@+id/resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/resume" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/progress_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:max="100" />

        <Button
            android:id="@+id/seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/seek" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/stop" />

    </LinearLayout>

    <com.yj.player.view.NativeVideoPreviewer
        android:id="@+id/video_previewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>